--- a/settings.json
+++ b/settings.json
@@ -1,19 +1,23 @@
 {
-    "backgroundImage": "New Clock Face.png",
-    "AnalogClockHands": 
+    "clock": 
         {
-        "sweep": "True",
-        "hourColor": "(0,192,0)",
-        "hourHubRadius": "20",
-        "minuteHubColor": "(0,0,192)",
-        "minuteHubRadius": "15",
-        "secondColor": "(192,0,0)",
-        "secondHubRadius": "10"
-        },
-    "-AnalogClockTickMarks": 
-        {
-        "quarterHourColor": "(255,0,0)",
-        "hourColor": "(0,0,192)",
-        "minuteColor": "(0,0,192)"
-        }
+        "backgroundImage": "New Clock Face.png",
+        "hands": 
+            {
+            "sweep": "True",
+            "hoursColor": "(0,192,0)",
+            "hoursHubRadius": "20",
+            "minutesColor": "(0,0,192)",
+            "minutesHubColor": "(0,0,192)",
+            "minutesHubRadius": "15",
+            "secondsColor": "(192,0,0)",
+            "secondsHubRadius": "10"
+            },
+        "-face":
+            {
+            "quarterHourColor": "(255,0,0)",
+            "hoursColor": "(0,0,192)",
+            "minutesColor": "(0,0,192)"
+            }
+    }
 }
