Enable deugpy debugging. AnalogClockFace now uses AnalogGauge. Add Settings class to load classes from settings.json. Add Layer.getProperty() method to get style properties from self or parent. Layers no longer take surface in __init__().

--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,8 @@
 {
-    "clock": 
+    "clockPage": 
         {
         "backgroundImage": "New Clock Face.png",
-        "hands": 
+        "clockHands": 
             {
             "sweep": "True",
             "hoursColor": "(0,192,0)",
@@ -13,7 +13,7 @@
             "secondsColor": "(192,0,0)",
             "secondsHubRadius": "10"
             },
-        "-face":
+        "-clockFace":
             {
             "quarterHourColor": "(255,0,0)",
             "hoursColor": "(0,0,192)",
