--- a/settings.json
+++ b/settings.json
@@ -1,23 +1,45 @@
 {
-    "clockPage": 
+    "clockPage" : 
         {
-        "backgroundImage": "New Clock Face.png",
-        "clockHands": 
+        "backgroundImage" : "New Clock Face.png",
+        "clockHands" : 
             {
-            "sweep": "True",
-            "hoursColor": "(0,192,0)",
-            "hoursHubRadius": "20",
-            "minutesColor": "(0,0,192)",
-            "minutesHubColor": "(0,0,192)",
-            "minutesHubRadius": "15",
-            "secondsColor": "(192,0,0)",
-            "secondsHubRadius": "10"
+            "sweep" : "True",
+            "hoursColor" : "(0,192,0)",
+            "hoursHubRadius" : "20",
+            "minutesColor" : "(0,0,192)",
+            "minutesHubColor" : "(0,0,192)",
+            "minutesHubRadius" : "15",
+            "secondsColor" : "(192,0,0)",
+            "secondsHubRadius" : "10"
             },
-        "-clockFace":
+        "clockFace" : 
             {
-            "quarterHourColor": "(255,0,0)",
-            "hoursColor": "(0,0,192)",
-            "minutesColor": "(0,0,192)"
+            "style" : 
+                {
+                "radius" : "200"
+                },
+            "minutesStyle" : 
+                {
+                "length" : 10,
+                "width" : 3,
+                "strokeColor" : "(0,0,0)",
+                "fillColor" : "(0,0,0)"
+                },
+            "quarterHoursStyle" : 
+                {
+                    "length" : 30,
+                    "width" : 7,
+                    "strokeColor" : "(0,0,0)",
+                    "fillColor" : "(255,0,0)"
+                },
+            "hoursStyle" : 
+                {
+                    "length" : 20,
+                    "width" : 5,
+                    "strokeColor" : "(0,0,0)",
+                    "fillColor" : "(0,0,255)"
+                }
             }
-    }
+        }
 }
