--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,29 @@
 {
+    "styles":
+    {
+        "minutesStyle":
+        {
+            "length": 10,
+            "width": 3,
+            "strokeColor": "(0,0,0)",
+            "fillColor": "(0,0,0)"
+        },
+        "quarterHoursStyle":
+        {
+            "length": 30,
+            "width": 7,
+            "strokeColor": "(0,0,0)",
+            "fillColor": "(255,0,0)"
+        },
+        "hoursStyle":
+        {
+            "length": 20,
+            "width": 5,
+            "strokeColor": "(0,0,0)",
+            "fillColor": "(0,0,255)"
+        }
+
+    },
     "clockPages":
     {
         "1":
