--- a/settings.json
+++ b/settings.json
@@ -90,27 +90,9 @@
                 {
                     "radius": "200"
                 },
-                "minutesStyle":
-                {
-                    "length": 10,
-                    "width": 3,
-                    "strokeColor": "(0,0,0)",
-                    "fillColor": "(0,0,0)"
-                },
-                "quarterHoursStyle":
-                {
-                    "length": 30,
-                    "width": 7,
-                    "strokeColor": "(0,0,0)",
-                    "fillColor": "(255,0,0)"
-                },
-                "hoursStyle":
-                {
-                    "length": 20,
-                    "width": 5,
-                    "strokeColor": "(0,0,0)",
-                    "fillColor": "(0,0,255)"
-                }
+                "minutesStyle": "#styles.minutesStyle",
+                "quarterHoursStyle": "#styles.quarterHoursStyle",
+                "hoursStyle": "#styles.hoursStyle"
             }
         }
     }
