--- a/settings.json
+++ b/settings.json
@@ -1,28 +1,51 @@
 {
     "styles":
     {
-        "minutesStyle":
+        "minuteTicksStyle":
         {
             "length": 10,
             "width": 3,
             "strokeColor": "(0,0,0)",
             "fillColor": "(0,0,0)"
         },
-        "quarterHoursStyle":
+        "quarterHourTicksStyle":
         {
             "length": 30,
             "width": 7,
             "strokeColor": "(0,0,0)",
             "fillColor": "(255,0,0)"
         },
-        "hoursStyle":
+        "hourTicksStyle":
         {
             "length": 20,
             "width": 5,
             "strokeColor": "(0,0,0)",
             "fillColor": "(0,0,255)"
+        },
+        "hoursHandStyle":
+        {
+            "length": -110,
+            "width": 11,
+            "strokeColor": "(0,0,255)",
+            "fillColor": "(0,0,255)",
+            "hubRadius": "20"
+        },
+        "minutesHandStyle":
+        {
+            "length": -80,
+            "width": 6,
+            "strokeColor": "(0,255,0)",
+            "fillColor": "(0,255,0)",
+            "hubRadius": "15"
+        },
+        "secondsHandStyle":
+        {
+            "length": -50,
+            "width": 3,
+            "strokeColor": "(255,0,0)",
+            "fillColor": "(255,0,0)",
+            "hubRadius": "10"
         }
-
     },
     "clockPages":
     {
@@ -32,13 +55,9 @@
             "clockHands":
             {
                 "sweep": "True",
-                "hoursColor": "(0,192,0)",
-                "hoursHubRadius": "20",
-                "minutesColor": "(0,0,192)",
-                "minutesHubColor": "(0,0,192)",
-                "minutesHubRadius": "15",
-                "secondsColor": "(192,0,0)",
-                "secondsHubRadius": "10"
+                "hoursStyle": "#styles.hoursHandStyle",
+                "minutesStyle": "#styles.minutesHandStyle",
+                "secondsStyle": "#styles.secondsHandStyle"
             }
         },
         "2":
@@ -46,14 +65,7 @@
             "backgroundImage": "Old Clock Face.png",
             "clockHands":
             {
-                "sweep": "False",
-                "hoursColor": "(0,0,0)",
-                "hoursHubRadius": "20",
-                "minutesColor": "(0,0,0)",
-                "minutesHubColor": "(0,0,0)",
-                "minutesHubRadius": "15",
-                "secondsColor": "(192,0,0)",
-                "secondsHubRadius": "10"
+                "sweep": "False"
             }
         },
         "2a":
@@ -61,28 +73,14 @@
             "backgroundImage": "Clock Face 2.png",
             "clockHands":
             {
-                "sweep": "False",
-                "hoursColor": "(0,0,0)",
-                "hoursHubRadius": "20",
-                "minutesColor": "(0,0,0)",
-                "minutesHubColor": "(0,0,0)",
-                "minutesHubRadius": "15",
-                "secondsColor": "(192,0,0)",
-                "secondsHubRadius": "10"
+                "sweep": "False"
             }
         },
         "3":
         {
             "clockHands":
             {
-                "sweep": "False",
-                "hoursColor": "(0,0,0)",
-                "hoursHubRadius": "20",
-                "minutesColor": "(0,0,0)",
-                "minutesHubColor": "(0,0,0)",
-                "minutesHubRadius": "15",
-                "secondsColor": "(192,0,0)",
-                "secondsHubRadius": "10"
+                "sweep": "False"
             },
             "clockFace":
             {
@@ -90,9 +88,9 @@
                 {
                     "radius": "200"
                 },
-                "minutesStyle": "#styles.minutesStyle",
-                "quarterHoursStyle": "#styles.quarterHoursStyle",
-                "hoursStyle": "#styles.hoursStyle"
+                "minutesStyle": "#styles.minuteTicksStyle",
+                "quarterHoursStyle": "#styles.quarterHourTicksStyle",
+                "hoursStyle": "#styles.hourTicksStyle"
             }
         }
     }
