Clean out unused code in ClockPage

--- a/settings.json
+++ b/settings.json
@@ -104,6 +104,10 @@
         },
         "3":
         {
+            "style":
+            {
+                "backColor": "(64,64,0)"
+            },
             "clockHands":
             {
                 "sweep": "False"
