Implement button press auto repeat. FMPage displays the frequency reported by the tuner (rather than the frequency sent to the tuner). This was required for scan mode. Implement scan mode on FMPage. Add call sign and format for known FM stations. Ignore first rotary change on auto switch to another page.

--- a/settings.json
+++ b/settings.json
@@ -126,15 +126,62 @@
     },
     "fmStations":
     [
-        {"callSign" : "KEXP", "frequency" : "903"},
-        {"callSign" : "KING", "frequency" : "981"},
-        {"callSign" : "KIRO", "frequency" : "973"},
-        {"callSign" : "KISW", "frequency" : "999"},
-        {"callSign" : "KJR", "frequency" : "957"},
-        {"callSign" : "KPLU", "frequency" : "885"},
-        {"callSign" : "KRWM", "frequency" : "1069"},
-        {"callSign" : "KUBE", "frequency" : "933"},
-        {"callSign" : "KUOW", "frequency" : "949"},
-        {"callSign" : "KZOK", "frequency" : "1025"}
+        {"callSign" : "KWAO", "frequency" : "88.1", "city" : "Vashon", "format" : "Christian Contemporary"},
+        {"callSign" : "KNKX", "frequency" : "88.5", "city" : "Tacoma", "format" : "Public Radio"},
+        {"callSign" : "KMIH", "frequency" : "88.9", "city" : "Mercer Island", "format" : "Grade School (K-12)"},
+        {"callSign" : "KNHC", "frequency" : "89.5", "city" : "Seattle", "format" : "Dance"},
+        {"callSign" : "KASB", "frequency" : "89.9", "city" : "Bellevue", "format" : "Grade School (K-12)"},
+        {"callSign" : "KEXP", "frequency" : "90.3", "city" : "Seattle", "format" : "Alternative"},
+        {"callSign" : "KSER", "frequency" : "90.7", "city" : "Everett", "format" : "Variety"},
+        {"callSign" : "KVTI", "frequency" : "90.9", "city" : "Tacoma", "format" : "Public Radio"},
+        {"callSign" : "KBCS", "frequency" : "91.3", "city" : "Bellevue", "format" : "Variety"},
+        {"callSign" : "KYFQ", "frequency" : "91.7", "city" : "Tacoma", "format" : "Religious"},
+        {"callSign" : "K221FR", "frequency" : "92.1", "city" : "West Seattle, Etc.", "format" : "Public Radio"},
+        {"callSign" : "KQMV", "frequency" : "92.5", "city" : "Bellevue", "format" : "Top-40"},
+        {"callSign" : "KISM", "frequency" : "92.9", "city" : "Bellingham", "format" : "Classic Rock"},
+        {"callSign" : "KUBE", "frequency" : "93.3", "city" : "Seattle", "format" : "Sports"},
+        {"callSign" : "KLSY", "frequency" : "93.7", "city" : "Belfair", "format" : "Spanish Christian"},
+        {"callSign" : "KSWD", "frequency" : "94.1", "city" : "Seattle", "format" : "Adult Contemporary"},
+        {"callSign" : "K233BU", "frequency" : "94.5", "city" : "Seattle", "format" : "Talk"},
+        {"callSign" : "KUOW", "frequency" : "94.9", "city" : "Seattle", "format" : "Public Radio"},
+        {"callSign" : "KJR", "frequency" : "95.7", "city" : "Seattle", "format" : "80's Rock"},
+        {"callSign" : "KXXO", "frequency" : "96.1", "city" : "Olympia", "format" : "Adult Contemporary"},
+        {"callSign" : "KJAQ", "frequency" : "96.5", "city" : "Seattle", "format" : "Adult Hits"},
+        {"callSign" : "KODX", "frequency" : "96.9", "city" : "Seattle", "format" : "News/Talk"},
+        {"callSign" : "KIRO", "frequency" : "97.3", "city" : "Tacoma", "format" : "News/Talk"},
+        {"callSign" : "KNWN", "frequency" : "97.7", "city" : "Oakville", "format" : "News"},
+        {"callSign" : "KING", "frequency" : "98.1", "city" : "Seattle", "format" : "Classical"},
+        {"callSign" : "KNUC", "frequency" : "98.9", "city" : "Seattle", "format" : "Country"},
+        {"callSign" : "KDDS", "frequency" : "99.3", "city" : "Elma", "format" : "Regional Mexican"},
+        {"callSign" : "KISW", "frequency" : "99.9", "city" : "Seattle", "format" : "Rock"},
+        {"callSign" : "K262CX", "frequency" : "100.3", "city" : "Shoreline", "format" : "Religious"},
+        {"callSign" : "KKWF", "frequency" : "100.7", "city" : "Seattle", "format" : "Country"},
+        {"callSign" : "KMGP", "frequency" : "101.1", "city" : "Magnuson Park", "format" : "Variety"},
+        {"callSign" : "KPLZ", "frequency" : "101.5", "city" : "Seattle", "format" : "Hot AC"},
+        {"callSign" : "KQES", "frequency" : "101.9", "city" : "Bellevue", "format" : "Asian"},
+        {"callSign" : "KXSU", "frequency" : "102.1", "city" : "Seattle", "format" : "College"},
+        {"callSign" : "KZOK", "frequency" : "102.5", "city" : "Seattle", "format" : "Classic Rock"},
+        {"callSign" : "KZTM", "frequency" : "102.9", "city" : "McKenna", "format" : "Regional Mexican"},
+        {"callSign" : "K277AE", "frequency" : "103.3", "city" : "Seattle", "format" : "Dance"},
+        {"callSign" : "KHTP", "frequency" : "103.7", "city" : "Tacoma", "format" : "Urban Contemporary"},
+        {"callSign" : "K281CQ", "frequency" : "104.1", "city" : "Seattle", "format" : "Religious"},
+        {"callSign" : "KLSW", "frequency" : "104.5", "city" : "Covington", "format" : "Christian Contemporary"},
+        {"callSign" : "KHUH", "frequency" : "104.9", "city" : "Seattle", "format" : "Variety"},
+        {"callSign" : "KCMS", "frequency" : "105.3", "city" : "Edmonds", "format" : "Christian Contemporary"},
+        {"callSign" : "KVRU", "frequency" : "105.7", "city" : "Seattle", "format" : "Variety"},
+        {"callSign" : "KBKS", "frequency" : "106.1", "city" : "Tacoma", "format" : "Top-40"},
+        {"callSign" : "KWPZ", "frequency" : "106.5", "city" : "Lynden", "format" : "Christian Contemporary"},
+        {"callSign" : "KRWM", "frequency" : "106.9", "city" : "Bremerton", "format" : "Adult Contemporary"},
+        {"callSign" : "KBFG", "frequency" : "107.3", "city" : "Seattle", "format" : "Variety"},
+        {"callSign" : "KNDD", "frequency" : "107.7", "city" : "Seattle", "format" : "Alternative"}
+    ],
+    "presetFMStations" :
+    [
+        "88.5",
+        "94.9",
+        "95.7",
+        "98.1",
+        "93.3",
+        "102.5"
     ]
 }
